chore(): simplify env

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 GITHUB_USER_AGENT=lovelystay_challenge
 GITHUB_TOKEN=github_pat_XXXXXXXX
 POSTGRES_USER=lovelystay
-POSTGRES_PASSWORD=XXXXXXXXXX
+POSTGRES_PASSWORD=itdoesntmatter
 POSTGRES_DB=lovelystay_db
-DATABASE_URL=postgresql://lovelystay:XXXXXXXXXX@localhost:5432/lovelystay_db
+DATABASE_URL=postgresql://lovelystay:itdoesntmatter@localhost:5432/lovelystay_db
